--- a/customer-service.yml
+++ b/customer-service.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: customer-service
   datasource:
-    url: jdbc:mysql://localhost:3306/ur_service?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/customer_master?createDatabaseIfNotExist=true
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -11,5 +11,5 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
-      ddl-auto: update
-    show-sql: true  
+      ddl-auto: none
+    show-sql: false 
