--- a/order-service.yml
+++ b/order-service.yml
@@ -1,8 +1,8 @@
 spring:
   application:
-    name: order-service
+    name: customer-service
   datasource:
-    url: jdbc:mysql://localhost:3306/order_master?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/customer_master?createDatabaseIfNotExist=true
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
