--- a/order-service-prod.yml
+++ b/order-service-prod.yml
@@ -1,10 +1,11 @@
 global:
-  message: welcome to order prod environment!!
+  message: welcome to order prod environment!! # Use this one, or the other, or combine them
+  # If 'hello from prod' is a different message, give it a different key
+  # app-info: hello from prod
 server:
   port: 6003
-message: hello from prod
-spring:
-   datasource:
+spring: # This 'spring' key should be at the same level as 'server' and 'global'
+  datasource:
     url: jdbc:mysql://localhost:3306/order_prod?createDatabaseIfNotExist=true
     username: root
     password: root
@@ -16,4 +17,5 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+ 
  
